@@ -7,6 +7,7 @@
      ARCH: QuickSearch is moved to KrView from Detailed/Brief views
      ARCH: Keyboard handling is moved to KrView from Detailed/Brief views
 
+    FIXED: Konfigurator has scrollbars if necessary.
     FIXED: [ 2027518 ] Does not build with -DBUILD_SHARED_LIBS:BOOL=ON
            (thanks to Funda Wang)
     FIXED: [ 2041732 ] Krusader 2.0.0 beta1 missing title bar under Compiz
